feat(neovim,tmux): use arrow keys to resize on vim, resize panes direcly

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -34,20 +34,18 @@ bind -n 'M-n' if-shell "$is_vim" "send-keys M-n" "select-pane -D"
 bind -n 'M-e' if-shell "$is_vim" "send-keys M-e" "select-pane -U"
 bind -n 'M-i' if-shell "$is_vim" "send-keys M-i" "select-pane -R"
 
-bind -n 'M-M' send-keys "M-M"
-bind -n 'M-N' if-shell "$is_vim" "send-keys M-N" "swap-pane -D"
-bind -n 'M-E' if-shell "$is_vim" "send-keys M-E" "swap-pane -U"
-bind -n 'M-I' send-keys "M-I"
+bind -n 'M-N' swap-pane -D
+bind -n 'M-E' swap-pane -U
 
 bind -n 'M-u' previous-window
 bind -n 'M-l' next-window
 bind -n 'M-U' swap-window -t -1 \; previous-window
 bind -n 'M-L' swap-window -t +1 \; next-window
 
-bind -n 'M-C-m' if-shell "$is_vim" "send-keys M-C-m" "resize-pane -L 4"
-bind -n 'M-C-n' if-shell "$is_vim" "send-keys M-C-n" "resize-pane -D 2"
-bind -n 'M-C-e' if-shell "$is_vim" "send-keys M-C-e" "resize-pane -U 2"
-bind -n 'M-C-i' if-shell "$is_vim" "send-keys M-C-i" "resize-pane -R 4"
+bind -n 'M-C-m' resize-pane -L 4
+bind -n 'M-C-n' resize-pane -D 2
+bind -n 'M-C-e' resize-pane -U 2
+bind -n 'M-C-i' resize-pane -R 4
 
 bind -n 'M-f' resize-pane -Z
 
