improvement(tmux): better win navigation

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -37,10 +37,10 @@ bind -n 'M-i' if-shell "$is_vim" "send-keys M-i" "select-pane -R"
 bind -n 'M-N' swap-pane -D
 bind -n 'M-E' swap-pane -U
 
-bind -n 'M-u' previous-window
-bind -n 'M-l' next-window
-bind -n 'M-U' swap-window -t -1 \; previous-window
-bind -n 'M-L' swap-window -t +1 \; next-window
+bind -n 'M-,' previous-window
+bind -n 'M-.' next-window
+bind -n 'M-<' swap-window -t -1 \; previous-window
+bind -n 'M->' swap-window -t +1 \; next-window
 
 bind -n 'M-C-m' resize-pane -L 4
 bind -n 'M-C-n' resize-pane -D 2
@@ -49,8 +49,8 @@ bind -n 'M-C-i' resize-pane -R 4
 
 bind -n 'M-f' resize-pane -Z
 
-bind -n 'M->' next-layout
-bind -n 'M-<' previous-layout
+bind -n "M-'" next-layout
+bind -n 'M-"' previous-layout
 bind -n 'M-=' next-layout \; previous-layout
 
 bind -n 'M-v' copy-mode
