--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -63,6 +63,13 @@ bind -T copy-mode-vi v send-keys -X begin-selection
 bind -T copy-mode-vi y send-keys -X copy-selection
 bind -T copy-mode-vi r send-keys -X rectangle-toggle
 
+bind-key -T copy-mode-vi m send -X cursor-left
+bind-key -T copy-mode-vi n send -X cursor-down
+bind-key -T copy-mode-vi e send -X cursor-up
+bind-key -T copy-mode-vi i send -X cursor-right
+bind-key -T copy-mode-vi k send -X search-again
+bind-key -T copy-mode-vi K send -X search-reverse
+
 bind -T root m if -F "#{==:#{pane_mode},tree-mode}" "send h" "send m"
 bind -T root n if -F "#{==:#{pane_mode},tree-mode}" "send j" "send n"
 bind -T root e if -F "#{==:#{pane_mode},tree-mode}" "send k" "send e"
