feat(theme): make package callable from everywhere

--- a/templating/package.json
+++ b/templating/package.json
@@ -2,11 +2,13 @@
   "name": "template_colors",
   "version": "0.0.1",
   "main": "index.js",
+  "bin": "index.js",
   "scripts": {},
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "chokidar": "^3.6.0",
     "glob": "^10.3.10",
     "node-watch": "^0.7.4",
     "nunjucks": "^3.2.4",
