feat(nix): create wallpaper binary

--- a/wallpaper/package.json
+++ b/wallpaper/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "bin": "index.js",
   "keywords": [],
   "author": "",
   "license": "ISC",
