--- a/mise/config.toml
+++ b/mise/config.toml
@@ -1,9 +1,5 @@
 [tools]
-erlang = "26.0"
-elixir = "1.16.3-otp-26"
 elm = "latest"
 lua = "latest"
-nodejs = "19.0.0"
-python = "latest"
+nodejs = "latest"
 rust = "latest"
-ruby = "latest"
