feat(tmux): create key sequence for config actions

--- a/modules/tmux/tmux.conf
+++ b/modules/tmux/tmux.conf
@@ -11,8 +11,12 @@ set -g @plugin 'b0o/tmux-autoreload'
 # ----- BINDINGS -----
 set -g prefix M-Space
 
-bind -n 'M-r' source-file "$HOME/.config/tmux/tmux.conf" \; display "Configuration Reloaded!"
-bind -n 'M-c' send-keys C-l \; run-shell "sleep .3s" \; clear-history
+bind-key -n 'M-c' switch-client -T config_mode
+bind-key -T config_mode h source-file "$HOME/.config/tmux/tmux.conf" \; display "Configuration Reloaded!"
+bind-key -T config_mode r run-shell "$HOME/.tmux/plugins/tmux-resurrect/scripts/restore.sh"
+bind-key -T config_mode s run-shell "$HOME/.tmux/plugins/tmux-resurrect/scripts/save.sh"
+bind-key -T config_mode i run-shell "$HOME/.tmux/plugins/tpm/bindings/install_plugins"
+bind-key -T config_mode u run-shell "$HOME/.tmux/plugins/tpm/bindings/update_plugins"
 
 bind -n 'M-d' command-prompt
 
@@ -114,8 +118,6 @@ set -g @resurrect-capture-pane-contents 'on'
 set -g @resurrect-strategy-vim 'session'
 set -g @resurrect-strategy-nvim 'session'
 set -g @resurrect-dir "~/.cache/tmux/resurrect"
-set -g @resurrect-save 'S'
-set -g @resurrect-restore 'R'
 set -g @yank_action 'copy-pipe-no-clear'
 
 # ----- RUN -----
