feat(hyprland): add dunst and flameshot

--- a/modules/hyprland/config/hyprland.conf
+++ b/modules/hyprland/config/hyprland.conf
@@ -1,10 +1,14 @@
+source=~/.config/hypr/env.conf
+
 # monitors
+
 monitor=HDMI-A-1,3440x1440@30,0x0,1
 monitor=eDP-1,1920x1080@30,3440x0,1
 
 # autostart
 
 exec = gsettings set org.gnome.desktop.interface gtk-theme "gtk-theme"
+exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 exec-once = systemctl --user start --no-block hyprland-session.target
 
 # env
@@ -91,10 +95,20 @@ windowrulev2 = suppressevent maximize, class:.*
 windowrulev2 = float, class:Rofi
 windowrulev2 = center, class:Rofi
 
+windowrulev2 = float, class:^(flameshot)
+windowrulev2 = fakefullscreen, class:^(flameshot)
+windowrulev2 = monitor 1, class:^(flameshot)
+windowrulev2 = move 0 0, class:^(flameshot)
+windowrulev2 = noanim, class:^(flameshot)
+windowrulev2 = noblur,class:^(flameshot)$,title:^(flameshot)
+windowrulev2 = noborder,class:^(flameshot)$,title:^(flameshot)
+windowrulev2 = pin,class:^(flameshot)$,title:^(flameshot)
+
 # keybindings
 
 $mainMod = SUPER
 
+bind = $mainMod, P, exec, flameshot gui
 bind = $mainMod, D, exec, rofi -show combi
 
 bind = $mainMod, return, exec, alacritty -e 'zsh'
