--- a/modules/polybar/config
+++ b/modules/polybar/config
@@ -32,7 +32,7 @@ font-0 = {{ font }}:pixelsize={{ fontSize }};{{ fontSize * 0.2 }}
 
 modules-left = i3 spotify
 modules-center = date
-modules-right = memory cpu battery temperature pulseaudio wlan
+modules-right = pulseaudio memory cpu battery temperature wlan
 
 cursor-click = pointer
 cursor-scroll = ns-resize
