fix(tmux): resume nvim on restart

--- a/modules/tmux/tmux.conf
+++ b/modules/tmux/tmux.conf
@@ -112,13 +112,15 @@ setw -g window-status-current-format "#[fg={{ colors.background }},bg={{ theme.p
 setw -g window-status-format "#[fg={{ colors.foreground }}] #I:#W "
 
 # Session
+resurrect_dir="$HOME/.cache/tmux/resurrect"
 set -g @continuum-restore 'on'
 set -g @continuum-save-interval '5'
+set -g @resurrect-dir $resurrect_dir
 set -g @resurrect-capture-pane-contents 'on'
+set -g @resurrect-hook-post-save-all "sed -i 's/--cmd[^ ]* [^ ]* [^ ]*//g' $resurrect_dir/last"
 set -g @resurrect-strategy-vim 'session'
 set -g @resurrect-strategy-nvim 'session'
-set -g @resurrect-dir "~/.cache/tmux/resurrect"
-set -g @yank_action 'copy-pipe-no-clear'
+set -g @resurrect-processes '~nvim'
 
 # ----- RUN -----
 
