feat(tmux): resume less and tig

--- a/modules/tmux/tmux.conf
+++ b/modules/tmux/tmux.conf
@@ -120,7 +120,7 @@ set -g @resurrect-capture-pane-contents 'on'
 set -g @resurrect-hook-post-save-all "sed -i 's/--cmd[^ ]* [^ ]* [^ ]*//g' $resurrect_dir/last"
 set -g @resurrect-strategy-vim 'session'
 set -g @resurrect-strategy-nvim 'session'
-set -g @resurrect-processes '~nvim'
+set -g @resurrect-processes '~nvim ~less ~tig'
 
 # ----- RUN -----
 
