feat(theme): add focus property

--- a/modules/picom/picom.conf
+++ b/modules/picom/picom.conf
@@ -4,11 +4,13 @@ shadow = false;
 {% if zen %}
 inactive-dim = 0.40;
 {% else %}
+{% if focus %}
+inactive-dim = {{ focus / 100 }};
+{% endif %}
 {% if transparency %}
 active-opacity = 0.95;
 inactive-opacity = 0.85;
 inactive-opacity-override = false;
-inactive-dim = 0.25;
 
 opacity-rule = [
   "0:_NET_WM_STATE@:32a *= '_NET_WM_STATE_HIDDEN'",
