--- a/modules/picom/picom.conf
+++ b/modules/picom/picom.conf
@@ -8,8 +8,8 @@ inactive-dim = 0.40;
 inactive-dim = {{ focus / 100 }};
 {% endif %}
 {% if transparency %}
-active-opacity = 0.95;
-inactive-opacity = 0.85;
+active-opacity = {{ 1 - transparency / 100 }};
+inactive-opacity = {{ 0.9 - transparency / 100 }};
 inactive-opacity-override = false;
 
 opacity-rule = [
@@ -19,12 +19,19 @@ opacity-rule = [
   "0:_NET_WM_STATE@[2]:32a *= '_NET_WM_STATE_HIDDEN'",
   "0:_NET_WM_STATE@[3]:32a *= '_NET_WM_STATE_HIDDEN'",
   "0:_NET_WM_STATE@[4]:32a *= '_NET_WM_STATE_HIDDEN'",
-  "95:_NET_WM_STATE@:32a *= '_NET_WM_STATE_FULLSCREEN'",
-  "95:_NET_WM_STATE@[0]:32a *= '_NET_WM_STATE_FULLSCREEN'",
-  "95:_NET_WM_STATE@[1]:32a *= '_NET_WM_STATE_FULLSCREEN'",
-  "95:_NET_WM_STATE@[2]:32a *= '_NET_WM_STATE_FULLSCREEN'",
-  "95:_NET_WM_STATE@[3]:32a *= '_NET_WM_STATE_FULLSCREEN'",
-  "95:_NET_WM_STATE@[4]:32a *= '_NET_WM_STATE_FULLSCREEN'"
+  "{{ 100 - transparency }}:_NET_WM_STATE@:32a *= '_NET_WM_STATE_FULLSCREEN'",
+  "{{ 100 - transparency }}:_NET_WM_STATE@[0]:32a *= '_NET_WM_STATE_FULLSCREEN'",
+  "{{ 100 - transparency }}:_NET_WM_STATE@[1]:32a *= '_NET_WM_STATE_FULLSCREEN'",
+  "{{ 100 - transparency }}:_NET_WM_STATE@[2]:32a *= '_NET_WM_STATE_FULLSCREEN'",
+  "{{ 100 - transparency }}:_NET_WM_STATE@[3]:32a *= '_NET_WM_STATE_FULLSCREEN'",
+  "{{ 100 - transparency }}:_NET_WM_STATE@[4]:32a *= '_NET_WM_STATE_FULLSCREEN'",
+  "{{ 100 - transparency }}:_NET_WM_STATE@:32a *= '_NET_WM_STATE_ABOVE'",
+  "{{ 100 - transparency }}:_NET_WM_STATE@[0]:32a *= '_NET_WM_STATE_ABOVE'",
+  "{{ 100 - transparency }}:_NET_WM_STATE@[1]:32a *= '_NET_WM_STATE_ABOVE'",
+  "{{ 100 - transparency }}:_NET_WM_STATE@[2]:32a *= '_NET_WM_STATE_ABOVE'",
+  "{{ 100 - transparency }}:_NET_WM_STATE@[3]:32a *= '_NET_WM_STATE_ABOVE'",
+  "{{ 100 - transparency }}:_NET_WM_STATE@[4]:32a *= '_NET_WM_STATE_ABOVE'",
+  "{{ 100 - transparency }}:class_g = 'i3-frame'"
 ];
 
 blur: {
