--- a/modules/i3/config
+++ b/modules/i3/config
@@ -124,8 +124,10 @@ bindsym $mod+$shift+0 move container to workspace number $ws10
 bindsym $mod+Ctrl+r exec i3-input -F 'rename workspace to "%s"' -P 'Destination: '
 
 # move workspace
+bindsym $mod+Up move workspace to output up
 bindsym $mod+Left move workspace to output left
 bindsym $mod+Right move workspace to output right
+bindsym $mod+Down move workspace to output down
 
 # i3
 set $mode_system System (l) lock, (e) logout, (r) reload, ($shift+r) reboot, ($shift+s) shutdown
