--- a/modules/tmux/tmux.conf
+++ b/modules/tmux/tmux.conf
@@ -1,10 +1,10 @@
 is_vim="tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)g?(view|n?vim?)(diff)?$'"
 
 set -g default-terminal "tmux-256color"
+set -g detach-on-destroy off
 
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-continuum'
-set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'b0o/tmux-autoreload'
 
@@ -13,17 +13,14 @@ set -g prefix M-Space
 
 bind-key -n 'M-c' switch-client -T config_mode
 bind-key -T config_mode h source-file "$HOME/.config/tmux/tmux.conf" \; display "Configuration Reloaded!"
-bind-key -T config_mode r run-shell "$HOME/.tmux/plugins/tmux-resurrect/scripts/restore.sh"
-bind-key -T config_mode s run-shell "$HOME/.tmux/plugins/tmux-resurrect/scripts/save.sh"
 bind-key -T config_mode i run-shell "$HOME/.tmux/plugins/tpm/bindings/install_plugins"
 bind-key -T config_mode u run-shell "$HOME/.tmux/plugins/tpm/bindings/update_plugins"
 
 bind -n 'M-d' command-prompt
 
-bind -n 'M-w' choose-window
-bind -n 'M-W' new-window
-bind -n 'M-s' choose-session
-bind -n 'M-S' command-prompt "new-session -s '%%'"
+bind -n 'M-s' display-popup -E -w 40% "sesh connect \"$( sesh list -i | fzf --ansi)\""
+bind -n 'M-S' run-shell 'tmux display-message -p "#S" | xargs -I {} tmuxinator new {} {}'
+bind -n 'M-k' kill-session
 
 bind -n 'M-q' if-shell "$is_vim" "send-keys M-q" "kill-pane"
 bind -n 'M-Q' kill-session
@@ -110,17 +107,6 @@ set -g pane-border-format "#{pane_index}"
 
 setw -g window-status-current-format "#[fg={{ colors.background }},bg={{ theme.primary }}] #I:#W "
 setw -g window-status-format "#[fg={{ colors.foreground }}] #I:#W "
-
-# Session
-resurrect_dir="$HOME/.cache/tmux/resurrect"
-set -g @continuum-restore 'on'
-set -g @continuum-save-interval '5'
-set -g @resurrect-dir $resurrect_dir
-set -g @resurrect-capture-pane-contents 'on'
-set -g @resurrect-hook-post-save-all "sed -i 's/--cmd[^ ]* [^ ]* [^ ]*//g' $resurrect_dir/last"
-set -g @resurrect-strategy-vim 'session'
-set -g @resurrect-strategy-nvim 'session'
-set -g @resurrect-processes '~nvim ~less ~tig'
 
 # ----- RUN -----
 
