feat(tmux): minor ui improvements

--- a/modules/tmux/tmux.conf
+++ b/modules/tmux/tmux.conf
@@ -1,8 +1,5 @@
 is_vim="tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)g?(view|n?vim?)(diff)?$'"
 
-set -g default-terminal "tmux-256color"
-set -g detach-on-destroy off
-
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-continuum'
 set -g @plugin 'tmux-plugins/tmux-sensible'
@@ -18,7 +15,7 @@ bind-key -T config_mode u run-shell "$HOME/.tmux/plugins/tpm/bindings/update_plu
 
 bind -n 'M-d' command-prompt
 
-bind -n 'M-s' display-popup -E -w 40% "sesh connect \"$( sesh list -i | fzf --ansi)\""
+bind -n 'M-s' display-popup -E -w 40% "sesh connect \"$( sesh list -i | fzf --ansi --color=bg:{{ colors.background_alt1 }},bg+:{{ colors.background_alt1 }})\""
 bind -n 'M-S' run-shell 'tmux display-message -p "#S" | xargs -I {} tmuxinator new {} {}'
 bind -n 'M-k' kill-session
 
@@ -88,6 +85,10 @@ set -g mouse on
 set -g history-limit 5000
 set -g repeat-time 1000
 
+# Terminal
+set -g default-terminal "tmux-256color"
+set -g detach-on-destroy off
+
 # Nvim
 set -g default-terminal "$TERM"
 set -ga terminal-overrides ",$TERM:RGB"
@@ -104,9 +105,16 @@ set -g pane-active-border-style fg="{{ theme.primary }}"
 set -g pane-border-style fg="{{ colors.grey4 }}"
 set -g pane-border-status bottom
 set -g pane-border-format "#{pane_index}"
+set -g pane-border-lines heavy
 
-setw -g window-status-current-format "#[fg={{ colors.background }},bg={{ theme.primary }}] #I:#W "
-setw -g window-status-format "#[fg={{ colors.foreground }}] #I:#W "
+setw -g window-status-format " #I:#W "
+setw -g window-status-current-format " #I:#W "
+setw -g window-status-current-style fg="{{ colors.background }},bg={{ theme.primary }}"
+
+# Popup
+set -g popup-style bg="{{ colors.background_alt1 }},fg={{ colors.foreground }}"
+set -g popup-border-style fg="{{ theme.primary }}"
+set -g popup-border-lines heavy
 
 # ----- RUN -----
 
