feat(tmux): use M-S to switch to previous session

--- a/modules/tmux/tmux.conf
+++ b/modules/tmux/tmux.conf
@@ -15,7 +15,7 @@ bind-key -T config_mode u run-shell "$HOME/.tmux/plugins/tpm/bindings/update_plu
 bind -n 'M-d' command-prompt
 
 bind -n 'M-s' display-popup -E -w 40% "sesh connect \"$( sesh list -i | fzf --ansi --color=bg:{{ colors.background_alt1 }},bg+:{{ colors.background_alt1 }})\""
-bind -n 'M-S' run-shell 'tmux display-message -p "#S" | xargs -I {} tmuxinator new {} {}'
+bind -n 'M-S' run-shell 'sesh last'
 bind -n 'M-k' kill-session
 
 bind -n 'M-q' if-shell "$is_vim" "send-keys M-q" "kill-pane"
