--- a/modules/i3/config
+++ b/modules/i3/config
@@ -52,7 +52,7 @@ bindsym XF86AudioMicMute exec --no-startup-id pactl set-source-mute @DEFAULT_SOU
 bindsym $mod+d exec rofi -show combi
 
 # terminal
-bindsym $mod+Return exec alacritty -e zsh
+bindsym $mod+Return exec alacritty
 
 # kill window
 bindsym $mod+q kill
