feat(tmux): add next-word and previous-word in copy mode

--- a/modules/tmux/tmux.conf
+++ b/modules/tmux/tmux.conf
@@ -60,6 +60,8 @@ bind -T copy-mode-vi v send-keys -X begin-selection
 bind -T copy-mode-vi y send-keys -X copy-selection
 bind -T copy-mode-vi r send-keys -X rectangle-toggle
 
+bind-key -T copy-mode-vi b send -X previous-word
+bind-key -T copy-mode-vi j send -X next-word
 bind-key -T copy-mode-vi m send -X cursor-left
 bind-key -T copy-mode-vi n send -X cursor-down
 bind-key -T copy-mode-vi e send -X cursor-up
