feat(zsh): add fast syntax highlighting plugin

--- a/modules/zsh/plugins.toml
+++ b/modules/zsh/plugins.toml
@@ -68,5 +68,9 @@ zle -N s
 bindkey '^[s' s
 '''
 
+[plugins.fast-syntax-highlighting]
+github = "zdharma-continuum/fast-syntax-highlighting"
+apply = ["defer"]
+
 [plugins.compinit]
 inline = 'autoload -Uz compinit && compinit'
