--- a/modules/tmux/tmux.conf
+++ b/modules/tmux/tmux.conf
@@ -26,23 +26,23 @@ bind -n 'M-t' new-window -c "#{pane_current_path}"
 bind -n 'M-_' split-window -c "#{pane_current_path}"
 bind -n 'M-\' split-window -h -c "#{pane_current_path}"
 
-bind -n 'M-m' if-shell "$is_vim" "send-keys M-m" "select-pane -L"
-bind -n 'M-n' if-shell "$is_vim" "send-keys M-n" "select-pane -D"
-bind -n 'M-e' if-shell "$is_vim" "send-keys M-e" "select-pane -U"
-bind -n 'M-i' if-shell "$is_vim" "send-keys M-i" "select-pane -R"
+bind -n 'M-Left' if-shell "$is_vim" "send-keys M-left" "select-pane -L"
+bind -n 'M-Down' if-shell "$is_vim" "send-keys M-down" "select-pane -D"
+bind -n 'M-Up' if-shell "$is_vim" "send-keys M-up" "select-pane -U"
+bind -n 'M-Right' if-shell "$is_vim" "send-keys M-right" "select-pane -R"
 
-bind -n 'M-N' swap-pane -D
-bind -n 'M-E' swap-pane -U
+bind -n 'M-S-Up' swap-pane -D
+bind -n 'M-S-Down' swap-pane -U
 
 bind -n 'M-,' previous-window
 bind -n 'M-.' next-window
 bind -n 'M-<' swap-window -t -1 \; previous-window
 bind -n 'M->' swap-window -t +1 \; next-window
 
-bind -n 'M-C-m' resize-pane -L 4
-bind -n 'M-C-n' resize-pane -D 2
-bind -n 'M-C-e' resize-pane -U 2
-bind -n 'M-C-i' resize-pane -R 4
+bind -n 'M-C-Left' resize-pane -L 4
+bind -n 'M-C-Down' resize-pane -D 2
+bind -n 'M-C-Up' resize-pane -U 2
+bind -n 'M-C-Right' resize-pane -R 4
 
 bind -n 'M-f' resize-pane -Z
 
@@ -59,15 +59,6 @@ bind -n 'M-J' choose-window 'join-pane -s "%%"'
 bind -T copy-mode-vi v send-keys -X begin-selection
 bind -T copy-mode-vi y send-keys -X copy-selection
 bind -T copy-mode-vi r send-keys -X rectangle-toggle
-
-bind-key -T copy-mode-vi b send -X previous-word
-bind-key -T copy-mode-vi j send -X next-word
-bind-key -T copy-mode-vi m send -X cursor-left
-bind-key -T copy-mode-vi n send -X cursor-down
-bind-key -T copy-mode-vi e send -X cursor-up
-bind-key -T copy-mode-vi i send -X cursor-right
-bind-key -T copy-mode-vi k send -X search-again
-bind-key -T copy-mode-vi K send -X search-reverse
 
 bind -T root m if -F "#{==:#{pane_mode},tree-mode}" "send h" "send m"
 bind -T root n if -F "#{==:#{pane_mode},tree-mode}" "send j" "send n"
