--- a/modules/tmux/tmux.conf
+++ b/modules/tmux/tmux.conf
@@ -24,7 +24,9 @@ bind -n 'M-z' detach-client
 
 bind -n 'M-t' new-window -c "#{pane_current_path}"
 bind -n 'M-_' split-window -c "#{pane_current_path}"
-bind -n 'M-\' split-window -h -c "#{pane_current_path}"
+bind -n 'M-/' split-window -h -c "#{pane_current_path}"
+bind -n "M-'" next-layout
+bind -n 'M-"' previous-layout
 
 bind -n 'M-Left' if-shell "$is_vim" "send-keys M-left" "select-pane -L"
 bind -n 'M-Down' if-shell "$is_vim" "send-keys M-down" "select-pane -D"
@@ -45,10 +47,6 @@ bind -n 'M-C-Up' resize-pane -U 2
 bind -n 'M-C-Right' resize-pane -R 4
 
 bind -n 'M-f' resize-pane -Z
-
-bind -n "M-'" next-layout
-bind -n 'M-"' previous-layout
-bind -n 'M-=' next-layout \; previous-layout
 
 bind -n 'M-v' copy-mode
 
