--- a/modules/i3/config
+++ b/modules/i3/config
@@ -7,7 +7,6 @@ set $ws1 "1"
 set $ws2 "2"
 set $ws3 "3"
 set $ws4 "4"
-set $ws5 "5"
 
 # window interface
 client.focused {{ colors.background }} {{ theme.primary }} {{ colors.background }} {{ theme.secondary }}
@@ -74,42 +73,35 @@ bindsym $mod+$ctrl+Right exec --no-startup-id i3resize right
 bindsym $mod+a focus parent
 bindsym $mod+$shift+a focus child
 
-# split
-bindsym $mod+$shift+v split h
-bindsym $mod+v split v
-
 # fullscreen
 bindsym $mod+f fullscreen toggle
+
+# split
+bindsym $mod+slash split h
+bindsym $mod+$shift+underscore split v
 
 # layout
 bindsym $mod+s layout stacking
 bindsym $mod+w layout tabbed
-bindsym $mod+t layout toggle split
+bindsym $mod+apostrophe layout toggle split
 
 # floating
-bindsym $mod+$shift+space floating toggle
-bindsym $mod+space focus mode_toggle
+bindsym $mod+space floating toggle
 
 # focus workspace
 bindsym $mod+1 workspace number $ws1
 bindsym $mod+2 workspace number $ws2
 bindsym $mod+3 workspace number $ws3
 bindsym $mod+4 workspace number $ws4
-bindsym $mod+5 workspace number $ws5
 
 # move container to workspace
 bindsym $mod+$shift+1 move container to workspace number $ws1
 bindsym $mod+$shift+2 move container to workspace number $ws2
 bindsym $mod+$shift+3 move container to workspace number $ws3
 bindsym $mod+$shift+4 move container to workspace number $ws4
-bindsym $mod+$shift+5 move container to workspace number $ws5
-
-# rename workspace
-bindsym $mod+Ctrl+r exec i3-input -F 'rename workspace to "%s"' -P 'Destination: '
 
 # move workspace
-bindsym $mod+$shift+comma move workspace to output nonprimary
-bindsym $mod+$shift+period move workspace to output primary
+bindsym $mod+$shift+period move workspace to output next
 
 # i3
 set $mode_system System (l) lock, (e) logout, (r) reload, ($shift+r) reboot, ($shift+s) shutdown
