--- a/modules/polybar/config
+++ b/modules/polybar/config
@@ -29,7 +29,7 @@ font-0 = {{ font }}:pixelsize={{ fontSize }};{{ fontSize * 0.2 }}
 
 modules-left = i3 spotify
 modules-center = date
-modules-right = pulseaudio memory cpu battery temperature wlan
+modules-right = pulseaudio memory cpu battery temperature wlan tray
 
 cursor-click = pointer
 cursor-scroll = ns-resize
@@ -194,6 +194,9 @@ type = custom/script
 tail = true
 interval = 0.5
 exec = playerctl-status spotify "" "" "%{F{{ theme.primary }}} %{F-}<title> (<artist>)" "%{F{{ theme.primary }}} %{F-}<title> (<artist>)"
+
+[module/tray]
+type = internal/tray
 
 [settings]
 screenchange-reload = true
