--- a/modules/tmux/tmux.conf
+++ b/modules/tmux/tmux.conf
@@ -3,6 +3,7 @@ is_vim="tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)g?(
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'b0o/tmux-autoreload'
+set -g default-command zsh
 
 # ----- BINDINGS -----
 set -g prefix M-Space
