--- a/modules/polybar/config
+++ b/modules/polybar/config
@@ -29,7 +29,7 @@ font-0 = {{ font }}:pixelsize={{ fontSize }};{{ fontSize * 0.2 }}
 
 modules-left = i3 spotify
 modules-center = date
-modules-right = pulseaudio memory cpu battery temperature wlan tray
+modules-right = pulseaudio memory cpu battery temperature-ok temperature-warn wlan tray
 
 cursor-click = pointer
 cursor-scroll = ns-resize
@@ -165,19 +165,23 @@ animation-low-1-foreground = {{ colors.magic_background }}
 animation-low-foreground = {{ colors.red }}
 animation-low-framerate = 500
 
-[module/temperature]
-type = internal/temperature
-thermal-zone = 0
-warn-temperature = 75
-label = %temperature-c%
+[module/temperature-ok]
+type = custom/script
+exec = cpu-temp -lt 75
+interval = 3
+label = %output%°C
 
-format = <label>
 format-prefix = " "
 format-prefix-foreground = {{ theme.primary }}
 
-format-warn = <label-warn>
-format-warn-prefix = " "
-format-warn-prefix-foreground = {{ theme.error }}
+[module/temperature-warn]
+type = custom/script
+exec = cpu-temp -ge 75
+interval = 3
+label = %output%°C
+
+format-prefix = " "
+format-prefix-foreground = {{ theme.error }}
 
 [module/pulseaudio]
 type = internal/pulseaudio
