--- a/home/modules/polybar/config
+++ b/home/modules/polybar/config
@@ -29,7 +29,7 @@ font-0 = {{ font }}:pixelsize={{ fontSize }};{{ fontSize * 0.2 }}
 
 modules-left = i3 spotify
 modules-center = date
-modules-right = pulseaudio memory cpu battery temperature-ok temperature-warn wlan tray
+modules-right = pulseaudio memory cpu temperature-ok temperature-warn battery wlan tray
 
 cursor-click = pointer
 cursor-scroll = ns-resize
