--- a/home/modules/polybar/config
+++ b/home/modules/polybar/config
@@ -29,7 +29,7 @@ font-0 = {{ font }}:pixelsize={{ fontSize }};{{ fontSize * 0.2 }}
 
 modules-left = i3 spotify
 modules-center = date
-modules-right = pulseaudio memory cpu temperature-ok temperature-warn battery wlan tray
+modules-right = pulseaudio memory cpu temperature battery wlan tray
 
 cursor-click = pointer
 cursor-scroll = ns-resize
@@ -165,23 +165,11 @@ animation-low-1-foreground = {{ colors.magic_background }}
 animation-low-foreground = {{ colors.red }}
 animation-low-framerate = 500
 
-[module/temperature-ok]
+[module/temperature]
 type = custom/script
-exec = cpu-temp -lt 75
 interval = 3
-label = %output%°C
-
-format-prefix = " "
-format-prefix-foreground = {{ theme.primary }}
-
-[module/temperature-warn]
-type = custom/script
-exec = cpu-temp -ge 75
-interval = 3
-label = %output%°C
-
-format-prefix = " "
-format-prefix-foreground = {{ theme.error }}
+exec = cpu-temp 75 "%{F{{ theme.primary }}} %{F-}<temp>°C" "%{F{{ theme.error }}} %{F-}<temp>°C"
+label = %output%
 
 [module/pulseaudio]
 type = internal/pulseaudio
