feat(alacritty): use C and V instead of Y and P for copy/paste

--- a/home/modules/alacritty/alacritty.toml
+++ b/home/modules/alacritty/alacritty.toml
@@ -42,12 +42,12 @@ style = "Regular"
 
 [[keyboard.bindings]]
 action = "Paste"
-key = "P"
+key = "V"
 mods = "Alt"
 
 [[keyboard.bindings]]
 action = "Copy"
-key = "Y"
+key = "C"
 mods = "Alt"
 
 [[keyboard.bindings]]
