--- a/home/modules/tmux/tmux.conf
+++ b/home/modules/tmux/tmux.conf
@@ -49,7 +49,7 @@ bind -n 'M-C-Right' resize-pane -R 4
 
 bind -n 'M-f' resize-pane -Z
 
-bind -n 'M-v' copy-mode
+bind -n 'M-Enter' copy-mode
 
 bind -n 'M-b' break-pane \; next-window
 bind -n 'M-j' choose-window 'join-pane -h -s "%%"'
