feat(rofi): add rofi-theme script

--- a/home/modules/i3/config
+++ b/home/modules/i3/config
@@ -45,6 +45,7 @@ bindsym XF86AudioMicMute exec --no-startup-id pactl set-source-mute @DEFAULT_SOU
 
 # menu
 bindsym $mod+d exec rofi -show combi
+bindsym $mod+t exec rofi-theme
 
 # terminal
 bindsym $mod+Return exec alacritty
