--- a/home/modules/i3/config
+++ b/home/modules/i3/config
@@ -52,7 +52,7 @@ bindsym $mod+t exec rofi-theme
 bindsym $mod+v exec copyq toggle
 
 # terminal
-bindsym $mod+Return exec alacritty
+bindsym $mod+Return exec kitty
 
 # kill window
 bindsym $mod+q kill
