--- a/home/modules/kitty/kitty.conf
+++ b/home/modules/kitty/kitty.conf
@@ -41,3 +41,4 @@ map ctrl+shift+x kitten hints --linenum-action background --type linenum run_on_
 # Others
 confirm_os_window_close 0
 shell zsh
+enable_audio_bell false
