--- a/home/modules/tmux/tmux.conf
+++ b/home/modules/tmux/tmux.conf
@@ -34,8 +34,8 @@ bind -n 'M-Down' if-shell "$is_vim" "send-keys M-down" "select-pane -D"
 bind -n 'M-Up' if-shell "$is_vim" "send-keys M-up" "select-pane -U"
 bind -n 'M-Right' if-shell "$is_vim" "send-keys M-right" "select-pane -R"
 
-bind -n 'M-S-Up' swap-pane -D
-bind -n 'M-S-Down' swap-pane -U
+bind -n 'M-S-Up' swap-pane -U
+bind -n 'M-S-Down' swap-pane -D
 
 bind -n 'M-,' previous-window
 bind -n 'M-.' next-window
