feat(tmux): use folder and commands as window name

--- a/home/modules/tmux/tmux.conf
+++ b/home/modules/tmux/tmux.conf
@@ -98,8 +98,9 @@ set -g pane-border-status bottom
 set -g pane-border-format "#{pane_index}"
 set -g pane-border-lines heavy
 
-setw -g window-status-format " #I:#W "
-setw -g window-status-current-format " #I:#W "
+set-option -g status-interval 1
+setw -g window-status-format ' #I:#(tmux_window_name #{window_id}) '
+setw -g window-status-current-format ' #I:#(tmux_window_name #{window_id})#[default] '
 setw -g window-status-current-style fg="{{ colors.background }},bg={{ theme.primary }}"
 
 # Popup
