--- a/home/modules/kitty/kitty.conf
+++ b/home/modules/kitty/kitty.conf
@@ -36,7 +36,7 @@ map alt+c copy_to_clipboard
 map alt+shift+equal change_font_size all +1.0
 map alt+minus change_font_size all -1.0
 map alt+equal change_font_size all 0
-map ctrl+shift+x kitten hints --linenum-action background --type linenum run_on_nvim {path}:{line}:0
+map ctrl+shift+x kitten hints --linenum-action background --type linenum tmux_run_on_nvim {path}:{line}:0
 
 # Others
 confirm_os_window_close 0
