--- a/home/modules/tmux/tmux.conf
+++ b/home/modules/tmux/tmux.conf
@@ -81,8 +81,10 @@ set -g default-terminal "tmux-256color"
 set -g detach-on-destroy off
 
 # Nvim
-set -g default-terminal "$TERM"
-set -ga terminal-overrides ",$TERM:RGB"
+set -g default-terminal "tmux-256color"
+set -ga terminal-features ',xterm*:RGB'
+set -g extended-keys always
+set -g extended-keys-format csi-u
 
 # Statusline
 set -g status on
