fix(tmux): extended-keys always breaks some neovim stuff

--- a/home/modules/tmux/tmux.conf
+++ b/home/modules/tmux/tmux.conf
@@ -78,12 +78,11 @@ set -g repeat-time 1000
 
 # Terminal
 set -g default-terminal "tmux-256color"
+set -ga terminal-features ',xterm*:RGB'
 set -g detach-on-destroy off
 
 # Nvim
-set -g default-terminal "tmux-256color"
-set -ga terminal-features ',xterm*:RGB'
-set -g extended-keys always
+set -g extended-keys on
 set -g extended-keys-format csi-u
 
 # Statusline
