feat(tmux): toggle hor/ver layouts with one shortcut

--- a/home/modules/tmux/tmux.conf
+++ b/home/modules/tmux/tmux.conf
@@ -26,7 +26,10 @@ bind -n 'M-z' detach-client
 bind -n 'M-t' new-window -c "#{pane_current_path}"
 bind -n 'M-_' split-window -c "#{pane_current_path}"
 bind -n 'M-/' split-window -h -c "#{pane_current_path}"
-bind -n "M-'" next-layout
+bind -n "M-'" run-shell '\
+  [ "$(tmux show -gv @l 2>/dev/null)" = "v" ] \
+    && tmux select-layout even-horizontal \; set -g @l h \
+    || tmux select-layout even-vertical \; set -g @l v'
 bind -n 'M-"' previous-layout
 
 bind -n 'M-Left' if-shell "$is_vim" "send-keys M-left" "select-pane -L"
