--- a/home/modules/i3/config
+++ b/home/modules/i3/config
@@ -39,7 +39,6 @@ exec --no-startup-id dex --autostart --environment i3
 exec --no-startup-id nm-applet
 
 # pulse audio
-set $refresh_i3status killall -SIGUSR1 i3status
 bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ +10% && $refresh_i3status
 bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ -10% && $refresh_i3status
 bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute @DEFAULT_SINK@ toggle && $refresh_i3status
@@ -48,6 +47,7 @@ bindsym XF86AudioMicMute exec --no-startup-id pactl set-source-mute @DEFAULT_SOU
 # menu
 bindsym $mod+d exec rofi -show combi
 bindsym $mod+t exec rofi-theme
+bindsym $mod+o exec rofi-otp
 
 # clipboard
 bindsym $mod+v exec copyq toggle
