feat(tmux): re enable window name on status bar, this time with max length

--- a/home/modules/tmux/tmux.conf
+++ b/home/modules/tmux/tmux.conf
@@ -101,8 +101,8 @@ set -g pane-border-format "#{pane_index}"
 set -g pane-border-lines heavy
 
 set-option -g status-interval 1
-setw -g window-status-format ' #I:#(tmux_window_name #{window_id}) '
-setw -g window-status-current-format ' #I:#(tmux_window_name #{window_id})#[default] '
+setw -g window-status-format ' #I:#(tmux_window_name #{window_id} 20) '
+setw -g window-status-current-format ' #I:#(tmux_window_name #{window_id} 20)#[default] '
 setw -g window-status-current-style fg="{{ colors.background }},bg={{ theme.primary }}"
 
 # Popup
