--- a/home/desktop/picom/picom.conf
+++ b/home/desktop/picom/picom.conf
@@ -44,6 +44,9 @@ blur: {
 
 backend = "glx";
 vsync = true;
+glx-no-stencil = true;
+glx-no-rebind-pixmap = true;
+xrender-sync-fence = true;
 mark-wmwin-focused = true;
 mark-ovredir-focused = true;
 detect-client-opacity = true;
