feat(prima): speed up a little bit

--- a/work/system/auto-cpufreq.conf
+++ b/work/system/auto-cpufreq.conf
@@ -1,11 +1,11 @@
 [charger]
 governor = performance
-turbo = never
+turbo = auto
 platform_profile = performance
 energy_perf_bias = 15
 
 [battery]
 governor = powersave
 turbo = never
-scaling_max_freq = 1400000
+scaling_max_freq = 1800000
 platform_profile = low-power
