--- a/home/cli/opencode/config.json
+++ b/home/cli/opencode/config.json
@@ -1,4 +1,5 @@
 {
   "$schema": "https://opencode.ai/config.json",
-  "model": "github-copilot/claude-sonnet-4.5"
+  "model": "github-copilot/claude-sonnet-4.5",
+  "theme": "system"
 }
