feat(tmux): better background/join functionalities

--- a/home/terminal/tmux/tmux.conf
+++ b/home/terminal/tmux/tmux.conf
@@ -54,9 +54,10 @@ bind -n 'M-f' resize-pane -Z
 
 bind -n 'M-Enter' copy-mode
 
-bind -n 'M-b' break-pane \; next-window
-bind -n 'M-j' choose-window 'join-pane -h -s "%%"'
-bind -n 'M-J' choose-window 'join-pane -s "%%"'
+bind -n 'M-b' display-popup -E -w 80% -h 80% "tmux_send horizontal"
+bind -n 'M-B' display-popup -E -w 80% -h 80% "tmux_send vertical"
+bind -n 'M-j' display-popup -E -w 80% -h 80% "tmux_join horizontal"
+bind -n 'M-J' display-popup -E -w 80% -h 80% "tmux_join vertical"
 
 bind -T copy-mode-vi v send-keys -X begin-selection
 bind -T copy-mode-vi y send-keys -X copy-selection
