--- a/mod/home/desktop/gammastep/config.ini
+++ b/mod/home/desktop/gammastep/config.ini
@@ -1,19 +1,14 @@
-[redshift]
+[general]
 temp-day=5800
 temp-night=4000
 
-transition=0
+fade=0
 
-brightness-day=1
+brightness-day=1.0
 brightness-night=0.8
-
-adjustment-method=randr
 
 location-provider=manual
 
 [manual]
 lat=44.5
 lon=11.5
-
-[randr]
-screen=0
