fix(zsh): import home manager env

--- a/mod/home/cli/yazi/config/keymap.toml
+++ b/mod/home/cli/yazi/config/keymap.toml
@@ -19,16 +19,24 @@ prepend_keymap = [
   { on = "<S-PageDown>", run = "noop" },
   { on = "<PageUp>", run = "arrow -50%" },
   { on = "<PageDown>", run = "arrow +50%" },
-  { on = "<Space>", run = "noop" },
+  { on = "<Space>", run = "toggle" },
   { on = "<Tab>", run = "noop" },
-  { on = "i", run = "spot" },
-  { on = ";", run = "spot" },
-  { on = ":", run = "spot" },
-  { on = "s", run = "search --via=rg" },
+  { on = "i", run = "spot", desc = "info" },
+  { on = ";", run = "noop" },
+  { on = ":", run = "noop" },
+  { on = "s", run = "search --via=rg", desc = "search" },
   { on = "S", run = "noop" },
-  { on = "z", run = "plugin zoxide" },
+  { on = "z", run = "plugin zoxide", desc = "zoxide" },
   { on = "Z", run = "noop" },
   { on = "?", run = "noop" },
   { on = "~", run = "noop" },
   { on = "<F1>", run = "noop" },
+  { on = "<C-Down>", run = "seek +5", desc = "preview scroll down" },
+  { on = "<C-Up>", run = "seek -5", desc = "preview scroll up" },
+]
+append_keymap = [
+  { on = [
+    "g",
+    "p",
+  ], run = "cd ~/programming", desc = "Go ~/programming" },
 ]
